<resources>
    <string name="app_name">Lesson2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="farm_">Ферма печенья</string>
    <string name="factory_">Завод печенья</string>
    <string name="mine_">Шахта печенья</string>
    <string name="lab_">Лаборатория печенья</string>

    <string name="farm_cost">100</string>
    <string name="factory_cost">500</string>
    <string name="mine_cost">2000</string>
    <string name="lab_cost">10000</string>
    <string name="saceship_cost">100000</string>
</resources>
